// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a AddressEdit 1`] = `
<div class="van-address-edit">
  <div class="van-address-edit__fields">
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>姓名</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" placeholder="收货人姓名" class="van-field__control"></div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>电话</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="收货人手机号" class="van-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="van-cell van-cell--clickable van-field">
      <div class="van-cell__title van-field__label"><span>地区</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" readonly="readonly" placeholder="选择省 / 市 / 区" class="van-field__control">
          <div class="van-field__right-icon"><i class="van-icon van-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="van-cell van-address-edit-detail">
      <div class="van-cell__value van-cell__value--alone">
        <div class="van-cell van-field">
          <div class="van-cell__title van-field__label"><span>详细地址</span></div>
          <div class="van-cell__value van-field__value">
            <div class="van-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="van-field__control"></textarea></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="van-address-edit__buttons"><button class="van-button van-button--danger van-button--normal van-button--block van-button--round">
      <div class="van-button__content"><span class="van-button__text">保存</span></div>
    </button></div>
</div>
`;

exports[`create a AddressEdit with props 1`] = `
<div class="van-address-edit">
  <div class="van-address-edit__fields">
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>姓名</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" placeholder="收货人姓名" class="van-field__control"></div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>电话</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="收货人手机号" class="van-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="van-cell van-cell--clickable van-field">
      <div class="van-cell__title van-field__label"><span>地区</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" readonly="readonly" placeholder="选择省 / 市 / 区" class="van-field__control">
          <div class="van-field__right-icon"><i class="van-icon van-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="van-cell van-address-edit-detail">
      <div class="van-cell__value van-cell__value--alone">
        <div class="van-cell van-field">
          <div class="van-cell__title van-field__label"><span>详细地址</span></div>
          <div class="van-cell__value van-field__value">
            <div class="van-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="van-field__control"></textarea></div>
          </div>
        </div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>邮政编码</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="邮政编码" class="van-field__control"></div>
      </div>
    </div>
  </div>
  <div class="van-cell van-cell--center van-address-edit__default">
    <div class="van-cell__title"><span>设为默认收货地址</span></div>
    <div role="switch" aria-checked="true" class="van-switch van-switch--on" style="font-size: 24px;">
      <div class="van-switch__node"></div>
    </div>
  </div>
  <div class="van-address-edit__buttons"><button class="van-button van-button--danger van-button--normal van-button--block van-button--round">
      <div class="van-button__content"><span class="van-button__text">保存</span></div>
    </button></div>
</div>
`;

exports[`set-default 1`] = `
<div class="van-address-edit">
  <div class="van-address-edit__fields">
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>姓名</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" placeholder="收货人姓名" class="van-field__control"></div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>电话</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="收货人手机号" class="van-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="van-cell van-cell--clickable van-field">
      <div class="van-cell__title van-field__label"><span>地区</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" readonly="readonly" placeholder="选择省 / 市 / 区" class="van-field__control">
          <div class="van-field__right-icon"><i class="van-icon van-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="van-cell van-address-edit-detail">
      <div class="van-cell__value van-cell__value--alone">
        <div class="van-cell van-field">
          <div class="van-cell__title van-field__label"><span>详细地址</span></div>
          <div class="van-cell__value van-field__value">
            <div class="van-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="van-field__control"></textarea></div>
          </div>
        </div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>邮政编码</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="邮政编码" class="van-field__control"></div>
      </div>
    </div>
  </div>
  <div class="van-cell van-cell--center van-address-edit__default">
    <div class="van-cell__title"><span>设为默认收货地址</span></div>
    <div role="switch" aria-checked="false" class="van-switch" style="font-size: 24px;">
      <div class="van-switch__node"></div>
    </div>
  </div>
  <div class="van-address-edit__buttons"><button class="van-button van-button--danger van-button--normal van-button--block van-button--round">
      <div class="van-button__content"><span class="van-button__text">保存</span></div>
    </button></div>
</div>
`;

exports[`show area component 1`] = `
<div class="van-address-edit">
  <div class="van-address-edit__fields">
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>姓名</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" placeholder="收货人姓名" class="van-field__control"></div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>电话</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="收货人手机号" class="van-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="van-cell van-cell--clickable van-field">
      <div class="van-cell__title van-field__label"><span>地区</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" readonly="readonly" placeholder="选择省 / 市 / 区" class="van-field__control">
          <div class="van-field__right-icon"><i class="van-icon van-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="van-cell van-address-edit-detail">
      <div class="van-cell__value van-cell__value--alone">
        <div class="van-cell van-field">
          <div class="van-cell__title van-field__label"><span>详细地址</span></div>
          <div class="van-cell__value van-field__value">
            <div class="van-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="van-field__control" style="height: auto;"></textarea></div>
          </div>
        </div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>邮政编码</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="邮政编码" class="van-field__control"></div>
      </div>
    </div>
  </div>
  <div class="van-cell van-cell--center van-address-edit__default">
    <div class="van-cell__title"><span>设为默认收货地址</span></div>
    <div role="switch" aria-checked="true" class="van-switch van-switch--on" style="font-size: 24px;">
      <div class="van-switch__node"></div>
    </div>
  </div>
  <div class="van-address-edit__buttons"><button class="van-button van-button--danger van-button--normal van-button--block van-button--round">
      <div class="van-button__content"><span class="van-button__text">保存</span></div>
    </button></div>
</div>
`;

exports[`show area component 2`] = `
<div class="van-address-edit">
  <div class="van-address-edit__fields">
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>姓名</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" placeholder="收货人姓名" class="van-field__control"></div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>电话</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="收货人手机号" class="van-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="van-cell van-cell--clickable van-field">
      <div class="van-cell__title van-field__label"><span>地区</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" readonly="readonly" placeholder="选择省 / 市 / 区" class="van-field__control">
          <div class="van-field__right-icon"><i class="van-icon van-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="van-cell van-address-edit-detail">
      <div class="van-cell__value van-cell__value--alone">
        <div class="van-cell van-field">
          <div class="van-cell__title van-field__label"><span>详细地址</span></div>
          <div class="van-cell__value van-field__value">
            <div class="van-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="van-field__control" style="height: auto;"></textarea></div>
          </div>
        </div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>邮政编码</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="邮政编码" class="van-field__control"></div>
      </div>
    </div>
  </div>
  <div class="van-cell van-cell--center van-address-edit__default">
    <div class="van-cell__title"><span>设为默认收货地址</span></div>
    <div role="switch" aria-checked="true" class="van-switch van-switch--on" style="font-size: 24px;">
      <div class="van-switch__node"></div>
    </div>
  </div>
  <div class="van-address-edit__buttons"><button class="van-button van-button--danger van-button--normal van-button--block van-button--round">
      <div class="van-button__content"><span class="van-button__text">保存</span></div>
    </button></div>
</div>
`;

exports[`valid area placeholder confirm 1`] = `
<div class="van-address-edit">
  <div class="van-address-edit__fields">
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>姓名</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" placeholder="收货人姓名" class="van-field__control"></div>
      </div>
    </div>
    <div class="van-cell van-field">
      <div class="van-cell__title van-field__label"><span>电话</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="tel" placeholder="收货人手机号" class="van-field__control"></div>
      </div>
    </div>
    <div role="button" tabindex="0" class="van-cell van-cell--clickable van-field">
      <div class="van-cell__title van-field__label"><span>地区</span></div>
      <div class="van-cell__value van-field__value">
        <div class="van-field__body"><input type="text" readonly="readonly" placeholder="选择省 / 市 / 区" class="van-field__control">
          <div class="van-field__right-icon"><i class="van-icon van-icon-arrow">
              <!----></i></div>
        </div>
      </div>
    </div>
    <div class="van-cell van-address-edit-detail">
      <div class="van-cell__value van-cell__value--alone">
        <div class="van-cell van-field">
          <div class="van-cell__title van-field__label"><span>详细地址</span></div>
          <div class="van-cell__value van-field__value">
            <div class="van-field__body"><textarea rows="1" placeholder="街道门牌、楼层房间号等信息" class="van-field__control" style="height: auto;"></textarea></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="van-address-edit__buttons"><button class="van-button van-button--danger van-button--normal van-button--block van-button--round">
      <div class="van-button__content"><span class="van-button__text">保存</span></div>
    </button></div>
</div>
`;
